Adding a jvmArgs parameter to the MavenRunner plugin.